--- a/polling-software/index.html
+++ b/polling-software/index.html
@@ -15,12 +15,12 @@
 
     <main class='adx'>
 
-
         <div class="adx-direction-inform">
             <h5>Rank the questions</h5>
             <p>Before Thursday's tutorial, rank the 6 questions in order of importance - based on what you think the
                 most important to least important question is.</p>
         </div>
+
         <div class="container">
             <div class="column" style="background-color:rgba(170, 170, 170, 0.411); text-align: center;">
                 <div id="questionChoices">
@@ -32,9 +32,18 @@
             </div>
 
         </div>
-        <div class="controls">
-            <button class="adx-button primary" id="checker">Submit</button>
+        <div class="container">
+            <div class="controls">
+
+                <button class="adx-button primary" id="checker">Submit</button>
+            </div>
         </div>
+        <div class="container">
+            <h1 id='isRight'></h1>
+        </div>
+
+
+
 
 
 
