Comments added in various places and some skeleton code

--- a/polling-software/index.html
+++ b/polling-software/index.html
@@ -38,6 +38,7 @@
                 <button class="adx-button primary" id="checker">Submit</button>
             </div>
         </div>
+
         <div class="container">
             <h1 id='isRight'></h1>
         </div>
@@ -74,9 +75,14 @@
         <!-- End Modal -->
     </main>
 
+    <!-- FIREBASE SET UP -->
+
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/j_code.js"></script>
 
