Final non-Firebase version

--- a/polling-software/index.html
+++ b/polling-software/index.html
@@ -22,10 +22,10 @@
         </div>
 
         <div class="container">
-            <div class="column" style="background-color:rgba(170, 170, 170, 0.411); text-align: center;">
-                <div id="questionChoices">
+            <div class="column" style="background-color:rgba(170, 170, 170, 0.411); text-align: center !important;">
+                <div style="text-align: center !important" id="questionChoices">
                     <!-- Column 1 Draggable Questions go here -->
-                    <p></p>
+                    <p style="text-align: center !important"></p>
 
                 </div>
 
@@ -49,13 +49,13 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="MainTitle">Progress so far</h5>
+                        <h5 class="modal-title" id="MainTitle">Thank you!</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body" id="MainBody">
-                        <!-- Body text goes here-->
+                        <p>Thank you! You'll be discussing these results during a future session.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" id="modalButton" class="btn btn-secondary"
