--- a/polling-software/index.html
+++ b/polling-software/index.html
@@ -16,9 +16,10 @@
     <main class='adx'>
 
         <div class="adx-direction-inform">
-            <h5>Rank the questions</h5>
-            <p>Before Thursday's tutorial, rank the 6 questions in order of importance - based on what you think the
-                most important to least important question is.</p>
+            <h5>Rank the questions from most important to least important</h5>
+            <p>Before Thursday's tutorial, please rank these 6 questions in order of most important to least important.</p>
+            <p>To do this, click on a question and drag it into position: the higher the position, the more important you think the question is; the lower the question, the less important it is.</p>
+            <p>Your tutor will reveal the results in your tutorial session.</p>
         </div>
 
         <div class="container">
