Framing text modification

--- a/polling-software/index.html
+++ b/polling-software/index.html
@@ -19,6 +19,7 @@
             <h5>Rank the questions from most important to least important</h5>
             <p>Before Thursday's tutorial, please rank these 6 questions in order of most important to least important.</p>
             <p>To do this, click on a question and drag it into position: the higher the position, the more important you think the question is; the lower the question, the less important it is.</p>
+            <p>Click the Submit button when you have ranked these 6 questions from most important (Position 1) to least important (Position 6).</p>
             <p>Your tutor will reveal the results in your tutorial session.</p>
         </div>
 
