Update wording on tutorial instructions and add link

--- a/polling-software/index.html
+++ b/polling-software/index.html
@@ -17,7 +17,7 @@
 
         <div class="adx-direction-inform">
             <h5>Rank the questions from most important to least important</h5>
-            <p>Before Thursday's tutorial, please rank these 6 questions in order of most important to least important.</p>
+            <p>Before the <a href="https://myuni.adelaide.edu.au/courses/69868/modules/items/2424628" target="_blank">next tutorial</a>, please rank these 6 questions in order of most important to least important.</p>
             <p>To do this, click on a question and drag it into position: the higher the position, the more important you think the question is; the lower the question, the less important it is.</p>
             <p>Click the Submit button when you have ranked these 6 questions from most important (Position 1) to least important (Position 6).</p>
             <p>Your tutor will reveal the results in your tutorial session.</p>
