--- a/entrep-table/index.html
+++ b/entrep-table/index.html
@@ -63,14 +63,14 @@
     <main class="adx">
         <br><br>
         <div class="selector">
-            <label class="container" style="display: inline;">
+            <label class="adx-container" style="display: inline;">
                 Similar characteristics
                 <input type="radio" name="entrep" value='both' checked>
                 <span class="radioMark"></span>
             </label>
         
 
-        <label class="container" style="display: inline;">
+        <label class="adx-container" style="display: inline;">
             Different characteristics
             <input type="radio" name="entrep" value='diff'>
             <span class="radioMark"></span>
@@ -78,7 +78,7 @@
 
         
 
-        <label class="container" style="display: inline;">
+        <label class="adx-container" style="display: inline;">
             All characteristics
             <input type="radio" name="entrep" value='all'>
             <span class="radioMark"></span>
