--- a/entrep-table/index.html
+++ b/entrep-table/index.html
@@ -121,7 +121,7 @@
             </tr>
             <tr class="both">
                 <td>Innovation</td>
-                <td colspan=2>Both entrepreneurs and intrapreneurs <strong>NEED</strong> to innovate. They need to identify the market gap or niche and innovate accordingly. They need to thorogouhly research existing products/services, competitors, and patents/copyrights/trademarks.</td>
+                <td colspan=2>Both entrepreneurs and intrapreneurs <strong>NEED</strong> to innovate. They need to identify the market gap or niche and innovate accordingly. They need to thoroughly research existing products/services, competitors, and patents/copyrights/trademarks.</td>
            
             </tr>
             <tr class="both">
