Removed some superfluous instruction text

--- a/converting-the-date/index.html
+++ b/converting-the-date/index.html
@@ -31,7 +31,7 @@
                     <h4 style="font-size: small;">SELECT DATE & TIME <i>(include am/pm)</i></h4>
                     <input type="datetime-local" id="dateInput" style="width: 200px;"><br>
                     <button class="adx-button primary" id="convert">Convert</button>
-                    <p><i>Note: Depending on your browser, this field may function slightly differently.</i></p>
+                    <!--<p><i>Note: Depending on your browser, this field may function slightly differently.</i></p>-->
                 </div>
                 <div class="column" style="text-align: center;">
                     <hp id="localDate"></hp>
