--- a/ppd-polling-software/index.html
+++ b/ppd-polling-software/index.html
@@ -16,10 +16,10 @@
     <main class='adx'>
 
         <div class="adx-direction-inform">
-            <h5>Rank the questions from most important to least important</h5>
-            <p>Before the <a href="https://myuni.adelaide.edu.au/courses/69868/modules/items/2424628" target="_blank">next tutorial</a>, please rank these 6 questions in order of most important to least important.</p>
-            <p>To do this, click on a question and drag it into position: the higher the position, the more important you think the question is; the lower the question, the less important it is.</p>
-            <p>Click the Submit button when you have ranked these 6 questions from most important (Position 1) to least important (Position 6).</p>
+            <h5>Ethical Dilemmas: What Would You Do?</h5>
+            <p>Use the poll feature to select one of the following 6 ethical dilemmas that you read about above that you would like to discuss with your fellow peers.</p>
+            <p>The dilemma with the most votes in the poll will be the chosen scenario to talk about in this week's tutorial/drop-in session.</p>
+            <p>Click the Submit button when you have ranked these 7 dilemas from most important (Position 1) to least important (Position 7).</p>
             <p>Your tutor will reveal the results in your tutorial session.</p>
         </div>
 
