--- a/ppd-scenario-table/index.html
+++ b/ppd-scenario-table/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="https://uamediaprod.github.io/uoa-styles/assets/theme.css" type="text/css" />
     <link rel="stylesheet" href="css/app.css" type="text/css">
 
+        <style>
+            /* override Sweet Alert styles */
+            .swal2-styled.swal2-confirm{
+                background-color: #102535 !important;
+            }
 
+            .swal2-styled.swal2-confirm:focus {
+                box-shadow: none !important;
+            }
+        </style>
 </head>
 
 <body>
@@ -227,7 +236,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script>
         // grab the table and convert into a PDF
@@ -248,6 +257,12 @@
             };
             var element = document.getElementById('printThis');
             html2pdf().set(opt).from(element).save();
+            Swal.fire(
+            'Saving PDF',
+            'Your answers have been saved to a .pdf file and will be downloaded shortly.',
+            'success'
+        )
+            
         }
     </script>
 
