--- a/ppd-polling-software/index.html
+++ b/ppd-polling-software/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://uamediaprod.github.io/uoa-styles/assets/theme.css" type="text/css" />
     <link rel="stylesheet" href="css/app.css" type="text/css">
 
-    
+
 </head>
 
 <body id="nothing">
@@ -17,17 +17,32 @@
 
         <div class="adx-direction-inform">
             <h5>Ethical Dilemmas: What Would You Do?</h5>
-            <p>Use the poll feature to select one of the following 6 ethical dilemmas that you read about above that you would like to discuss with your fellow peers.</p>
-            <p>The dilemma with the most votes in the poll will be the chosen scenario to talk about in this week's tutorial/drop-in session.</p>
-            <p>Click the Submit button when you have ranked these 7 dilemas from most important (Position 1) to least important (Position 7).</p>
+            <p>Use the poll feature to select one of the following 6 ethical dilemmas that you read about above that you
+                would like to discuss with your fellow peers.</p>
+            <p>The dilemma with the most votes in the poll will be the chosen scenario to talk about in this week's
+                tutorial/drop-in session.</p>
+            <p>Click the Submit button when you have ranked these 7 dilemas from most important (Position 1) to least
+                important (Position 7).</p>
             <p>Your tutor will reveal the results in your tutorial session.</p>
         </div>
 
         <div class="container">
             <div class="column" style="background-color:rgba(170, 170, 170, 0.411); text-align: center !important;">
+                <div style="text-align: center !important">
+                    <!-- Column 1 Draggable Questions go here -->
+                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">1</p>
+                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">2</p>
+                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">3</p>
+                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">4</p>
+                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">5</p>
+                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">6</p>
+                </div>
+            </div>
+            
+            <div class="column" style="background-color:rgba(170, 170, 170, 0.411); text-align: center !important;">
                 <div style="text-align: center !important" id="questionChoices">
                     <!-- Column 1 Draggable Questions go here -->
-                    <p style="text-align: center !important"></p>
+
 
                 </div>
 
@@ -76,7 +91,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
+        </script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/j_code.js"></script>
 
