--- a/ppd-polling-software/index.html
+++ b/ppd-polling-software/index.html
@@ -27,23 +27,21 @@
         </div>
 
         <div class="container">
-            <div class="column" style="background-color:rgba(170, 170, 170, 0.411); text-align: center !important;">
+            <div class="columnthin" style="background-color:rgba(170, 170, 170, 0.411); text-align: center !important;">
                 <div style="text-align: center !important">
                     <!-- Column 1 Draggable Questions go here -->
-                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">1</p>
-                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">2</p>
-                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">3</p>
-                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">4</p>
-                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">5</p>
-                    <p class="adx-button complimentary listQuestion" style="text-align: center !important">6</p>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">1</div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">2</div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">3</div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">4</div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">5</div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">6</div>
                 </div>
             </div>
-            
+
             <div class="column" style="background-color:rgba(170, 170, 170, 0.411); text-align: center !important;">
                 <div style="text-align: center !important" id="questionChoices">
                     <!-- Column 1 Draggable Questions go here -->
-
-
                 </div>
 
             </div>
