Fixed a few minor issues

--- a/ppd-polling-software/index.html
+++ b/ppd-polling-software/index.html
@@ -17,12 +17,9 @@
 
         <div class="adx-direction-inform">
             <h5>Ethical Dilemmas: What Would You Do?</h5>
-            <p>Use the poll feature to select one of the following 6 ethical dilemmas that you read about above that you
-                would like to discuss with your fellow peers.</p>
-            <p>The dilemma with the most votes in the poll will be the chosen scenario to talk about in this week's
-                tutorial/drop-in session.</p>
-            <p>Click the Submit button when you have ranked these 7 dilemas from most important (Position 1) to least
-                important (Position 7).</p>
+            <p>Use the poll feature to rank one of the following 6 ethical dilemmas that you read about above that you would like to discuss with your fellow peers.</p>
+            <p>The dilemma with the most votes in the poll will be the chosen scenario to talk about in this week's tutorial/drop-in session.</p>
+            <p>Click the Submit button when you have ranked these 6 dilemas from most important (Position 1) to least important (Position 6).</p>
             <p>Your tutor will reveal the results in your tutorial session.</p>
         </div>
 
