Changes to CSS layout

--- a/ppd-polling-software/dashboard.html
+++ b/ppd-polling-software/dashboard.html
@@ -63,11 +63,12 @@ var questions = [
     'DISCOUNTS FOR FRIENDS',
     'OFFICE RELATIONSHIPS',
     'FANCY LUNCH, WHO PAYS?',
-    'WHO IS GETTING FIRED?'
+    'WHO IS GETTING FIRED?',
+    'TAKE ONE FOR THE FAMILY'
 ];
 
 
-var counts = [0,0,0,0,0,0];
+var counts = [0,0,0,0,0,0,0];
 
 
 var polls = firebase.database().ref('ppd-poll/');
