--- a/ppd-polling-software/index.html
+++ b/ppd-polling-software/index.html
@@ -17,10 +17,13 @@
 
         <div class="adx-direction-inform">
             <h5>Ethical Dilemmas: What Would You Do?</h5>
-            <p>Use the poll feature to rank one of the following 6 ethical dilemmas that you read about above that you would like to discuss with your fellow peers.</p>
-            <p>The dilemma with the most votes in the poll will be the chosen scenario to talk about in this week's tutorial/drop-in session.</p>
-            <p>Click the Submit button when you have ranked these 6 dilemas from most important (Position 1) to least important (Position 6).</p>
-            <p>Your tutor will reveal the results in your tutorial session.</p>
+            <p>Use the poll feature to rank these 7 options, (these are based on the ethical dilemmas on the previous page). The dilemma ranked with the most votes will be the chosen scenario to talk about with your tutor and other students in this week's tutorial/drop-in session.</p>
+            <p><i>Your tutor will reveal the result in your tutorial session.</i></p>
+            <p><b>Remember:</b> click the 'Submit' button once you have ranked these 7 dilemmas from most interesting (Position 1) to least interesting (Position 7).</p>
+        </div>
+
+        <div class="container">
+            <div class="adx-button primary topbar listNumber" style="text-align: center !important">Most interesting</div>
         </div>
 
         <div class="container">
@@ -33,6 +36,7 @@
                     <div class="adx-button brand-midblue listNumber" style="text-align: center !important">4</div>
                     <div class="adx-button brand-midblue listNumber" style="text-align: center !important">5</div>
                     <div class="adx-button brand-midblue listNumber" style="text-align: center !important">6</div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">7</div>
                 </div>
             </div>
 
@@ -40,10 +44,17 @@
                 <div style="text-align: center !important" id="questionChoices">
                     <!-- Column 1 Draggable Questions go here -->
                 </div>
-
             </div>
-
         </div>
+
+        <div class="container">
+            <p>    </p>
+        </div>
+        <div class="container">
+        
+            <div class="adx-button primary bottombar listNumber" style="text-align: center !important">Least interesting</div>
+        </div>
+
         <div class="container">
             <div class="controls">
 
