--- a/ppd-polling-software/dashboard.html
+++ b/ppd-polling-software/dashboard.html
@@ -122,7 +122,8 @@ const myChart = new Chart(ctx, {
                 'rgba(255, 206, 86, 0.5)',
                 'rgba(75, 192, 192, 0.5)',
                 'rgba(153, 102, 255, 0.5)',
-                'rgba(255, 159, 64, 0.5)'
+                'rgba(255, 159, 64, 0.5)',
+                'rgba(144, 190, 109, 0.5)'
             ],
             borderColor: [
                 'rgba(255, 99, 132, 1)',
@@ -130,7 +131,8 @@ const myChart = new Chart(ctx, {
                 'rgba(255, 206, 86, 1)',
                 'rgba(75, 192, 192, 1)',
                 'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
+                'rgba(255, 159, 64, 1)',
+                'rgba(144, 190, 109, 1)'
             ],
             borderWidth: 1
         }]
