One extra final final change

--- a/ppd-polling-software/index.html
+++ b/ppd-polling-software/index.html
@@ -30,13 +30,13 @@
             <div class="columnthin" style="background-color:rgba(170, 170, 170, 0.411); text-align: center !important;">
                 <div style="text-align: center !important">
                     <!-- Column 1 Draggable Questions go here -->
-                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">1</div>
-                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">2</div>
-                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">3</div>
-                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">4</div>
-                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">5</div>
-                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">6</div>
-                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important">7</div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important"><b>1</b></div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important"><b>2</b></div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important"><b>3</b></div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important"><b>4</b></div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important"><b>5</b></div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important"><b>6</b></div>
+                    <div class="adx-button brand-midblue listNumber" style="text-align: center !important"><b>7</b></div>
                 </div>
             </div>
 
