Moved the import code to top

--- a/radargraph/index.html
+++ b/radargraph/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" type="text/css" href="css/jquery.nouislider.min.css" />
   <link rel="stylesheet" type="text/css" href="css/jquery.nouislider.pips.min.css" />
   <link rel="stylesheet" type="text/css" href="css/radar.css" />
+  <script>
+    import html2canvas from 'html2canvas';
+  </script>
   <script src="js/vendor/modernizr.js"></script>
   <script src="js/vendor/jquery.js"></script>
   <script src="js/foundation.min.js"></script>
@@ -17,9 +20,7 @@
   <script src="https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"></script>
   <script src="js/radar.js"></script>
   <script src="http://html2canvas.hertzen.com/build/html2canvas.js"></script>
-  <script>
-    
-  </script>
+ 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YTTKD1NKGW"></script>
