Updates - Currently broken! Woops!

--- a/wheel-of-life-radargraph/index.html
+++ b/wheel-of-life-radargraph/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Radargraph: Cybersecurity Self-assessment</title>
+  <title>Radargraph: My Wheel of Life</title>
   <link rel="stylesheet" type="text/css" href="css/foundation.min.css" />
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="css/jquery.nouislider.min.css" />
@@ -36,8 +36,6 @@
   <script>
 
     function myFunction(el) {
-      console.log("hi");
-
       var canvas = document.getElementById("characteristics");
 
       var image = canvas.toDataURL("image/jpg");
@@ -73,20 +71,7 @@
           <div id="rowss">
 
             <div class="row feedback">
-              <h3>Reflective questions</h3>
-
-
-              <ul>
-                <li>Consider the radar graph scores of each dimension, and interpret the results (i.e. are these what
-                  you might have expected? etc.)</li>
-                <li>In your opinion, do the scores of each dimension accurately reflect your current perception of your
-                  professional self? Justify your responses.</li>
-                <li>What do the results indicate regarding your current level of professional development in each of the
-                  5 areas? </li>
-                <li>How do these scores inform your next steps regarding setting achievable goals for future personal
-                  professional development to be ‘career ready’?</li>
-
-              </ul>
+              
 
             </div>
 
