--- a/ppd-polling-software/index.html
+++ b/ppd-polling-software/index.html
@@ -15,10 +15,14 @@
 
     <main class='adx'>
 
+
+
         <div class="adx-direction-inform">
             <h5>Ethical Dilemmas: What Would You Do?</h5>
-            <p>Use the poll feature to rank these 7 options, (these are based on the ethical dilemmas on the previous page). The dilemma ranked with the most votes will be the chosen scenario to talk about with your tutor and other students in this week's tutorial/drop-in session.</p>
+            <p>This poll features seven different ethical and professional dilemmas that may arise in the workplace. </p>
+            <p>The dilemma with the most votes in the poll will be the chosen scenario to talk about with your peers and tutor in this week's tutorial/drop-in session.</p>
             <p><i>Your tutor will reveal the result in your tutorial session.</i></p>
+            <p>This poll has been developed using dilemmas from the Corporate Compliance Insights “What Would You Do?” page.</p>
             <p><b>Remember:</b> click the 'Submit' button once you have ranked these 7 dilemmas from most interesting (Position 1) to least interesting (Position 7).</p>
         </div>
 
