--- a/converting-the-date/index.html
+++ b/converting-the-date/index.html
@@ -44,6 +44,7 @@
         </div>
     </main>
 
+    <script src="../shared-js/iframeresizer.contentwindow.js"></script>
     <script>
         // Prepares the Check Button
         document.getElementById("convert").addEventListener("click", function (e) {
