--- a/converting-the-date/index.html
+++ b/converting-the-date/index.html
@@ -44,7 +44,7 @@
         </div>
     </main>
 
-    <script src="../shared-js/iframeresizer.contentwindow.min.js"></script>
+    <script src="../shared-js/iframeResizer.contentWindow.min.js"></script>
     <script>
         // Prepares the Check Button
         document.getElementById("convert").addEventListener("click", function (e) {
